--- a/src/resources/fxml/MainMenu.fxml
+++ b/src/resources/fxml/MainMenu.fxml
@@ -1,12 +1,29 @@
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
-
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.VBox?>
+
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.layout.HBox?>
+
 <VBox fx:id="rootPane"
       xmlns:fx="http://javafx.com/fxml" alignment="center">
-	<ImageView>
-		<Image url="image/title.png"/>
-	</ImageView>
+	<VBox alignment="center">
+		<padding>
+			<Insets top="50" bottom="150"/>
+		</padding>
+		<ImageView scaleX="0.75" scaleY="0.75">
+			<Image url="image/title.png"/>
+		</ImageView>
+	</VBox>
+
+	<VBox fx:id="buttonBox" alignment="center" spacing="40">
+		<Label fx:id="singlePlayerButton" text="Single Player" styleClass="main-menu-item"/>
+		<Label fx:id="networkDuelButton" text="Network Duel" styleClass="main-menu-item"/>
+		<Label fx:id="profileButton" text="Profile" styleClass="main-menu-item"/>
+		<Label fx:id="exitButton" text="Exit" styleClass="main-menu-item"
+		       onMouseClicked="#exitButtonClicked"/>
+	</VBox>
 </VBox>
