Properly working main menu

--- a/src/resources/css/jfoenix-components.css
+++ b/src/resources/css/jfoenix-components.css
@@ -18,6 +18,10 @@
     -fx-font-size: 25px;
 }
 
+.page-center-pane {
+    -fx-pref-width: 60%;
+}
+
 /*******************************************************************************
  *                                                                             *
  * JFX Dialog Layout                                                           *
