--- a/src/resources/Controls/fxml/IconListItem.fxml
+++ b/src/resources/Controls/fxml/IconListItem.fxml
@@ -1,13 +1,8 @@
-<?import de.jensd.fx.fontawesome.Icon?>
-<?import javafx.geometry.Insets?>
+<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.layout.VBox?>
-<?import de.jensd.fx.glyphs.materialicons.MaterialIconView?>
 <fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
 	<HBox AnchorPane.leftAnchor="0" AnchorPane.topAnchor="0"
 	      AnchorPane.bottomAnchor="0" alignment="CENTER">
