--- a/src/resources/css/jfoenix-components.css
+++ b/src/resources/css/jfoenix-components.css
@@ -47,6 +47,24 @@
     -fx-text-fill: BLACK;
 }
 
+.dialog-data-item {
+    -fx-background-color: rgba(0, 0, 0, 0.05);
+    -fx-padding: 5px 20px;
+}
+
+.blue-spinner .arc {
+    -fx-stroke-width: 5px;
+}
+
+.ip-dial-button {
+    -fx-padding: 0.1em 0.1em;
+    -fx-font-size: 14px;
+    -fx-button-type: RAISED;
+    -fx-background-color: WHITE;
+    -fx-pref-width: 40px;
+    -fx-pref-height: 40px;
+}
+
 /*******************************************************************************
  *                                                                             *
  * JFX Dialog Layout                                                           *
@@ -166,8 +184,8 @@
     -fx-progress-color: #0F9D58;
     -fx-stroke-width: 3;
 }
-
 /* Icons Demo */
+
 .icon {
     -fx-text-fill: #FE774D;
     -fx-padding: 10;
@@ -197,8 +215,8 @@
     -fx-checked-color: RED;
     -fx-unchecked-color: BLACK;
 }
-
 /* Button */
+
 .button {
     -fx-padding: 0.7em 0.57em;
     -fx-font-size: 14px;
@@ -212,8 +230,8 @@
     -fx-pref-width: 200;
     -fx-text-fill: WHITE;
 }
-
 /* The main scrollbar **track** CSS class  */
+
 .mylistview .scroll-bar:horizontal .track,
 .mylistview .scroll-bar:vertical .track {
     -fx-background-color: transparent;
@@ -221,8 +239,8 @@
     -fx-background-radius: 0em;
     -fx-border-radius: 2em;
 }
-
 /* The increment and decrement button CSS class of scrollbar */
+
 .mylistview .scroll-bar:horizontal .increment-button,
 .mylistview .scroll-bar:horizontal .decrement-button {
     -fx-background-color: transparent;
@@ -245,8 +263,8 @@
     -fx-shape: " ";
     -fx-padding: 0;
 }
-
 /* The main scrollbar **thumb** CSS class which we drag every time (movable) */
+
 .mylistview .scroll-bar:horizontal .thumb,
 .mylistview .scroll-bar:vertical .thumb {
     -fx-background-color: derive(black, 90%);
@@ -402,20 +420,20 @@
 .tree-table-view .column-resize-line, .tree-table-view .column-drag-header {
     -fx-background-color: -fx-tree-table-rippler-color;
 }
-
 .tree-table-view:focused {
     -fx-background-color: -fx-tree-table-color, -fx-box-border, -fx-control-inner-background;
     -fx-background-insets: -1.4, 0, 1;
     -fx-background-radius: 1.4, 0, 0;
-    /*....*/
-    -fx-padding: 1; /* 0.083333em; */
+/*....*/
+-fx-padding: 1; /* 0.083333em; */
 }
 
 .tree-table-row-cell > .tree-disclosure-node > .arrow {
     -fx-background-color: -fx-text-fill;
-    -fx-padding: 0.333333em 0.229em 0.333333em 0.229em; /* 4 */
-    -fx-shape: "M 0 -3.5 L 4 0 L 0 3.5 z";
+-fx-padding: 0.333333em 0.229em 0.333333em 0.229em; /* 4 */
+-fx-shape: "M 0 -3.5 L 4 0 L 0 3.5 z";
 }
+
 
 .tree-table-row-cell .jfx-text-field {
     -fx-focus-color: rgba(240, 40, 40);
@@ -457,5 +475,3 @@
     -fx-border-color: rgb(180, 180, 180);
     -fx-border-width: 0 0 2 0;
 }
-
-
