--- a/src/resources/Controls/fxml/IconListItem.fxml
+++ b/src/resources/Controls/fxml/IconListItem.fxml
@@ -15,6 +15,6 @@
 	</VBox>
 	<HBox AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0"
 	      AnchorPane.bottomAnchor="0" alignment="CENTER">
-		<MaterialIconView glyphName="KEYBOARD_ARROW_RIGHT" glyphSize="30"/>
+		<MaterialIconView fx:id="icon" glyphName="KEYBOARD_ARROW_RIGHT" glyphSize="30"/>
 	</HBox>
 </fx:root>
