--- a/src/resources/Controls/fxml/IconListItem.fxml
+++ b/src/resources/Controls/fxml/IconListItem.fxml
@@ -3,10 +3,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 
-<fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml">
+<fx:root type="javafx.scene.layout.AnchorPane" xmlns:fx="http://javafx.com/fxml" styleClass="jfx-list-cell">
+	<!--<fx:root type="com.jfoenix.controls.JFXListCell" xmlns:fx="http://javafx.com/fxml" styleClass="jfx-list-cell">-->
 	<HBox AnchorPane.leftAnchor="0" AnchorPane.topAnchor="0"
 	      AnchorPane.bottomAnchor="0" alignment="CENTER">
-
 		<ImageView fx:id="imageView" fitHeight="60" fitWidth="60"/>
 	</HBox>
 	<VBox AnchorPane.leftAnchor="70" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0">
@@ -15,6 +15,6 @@
 	</VBox>
 	<HBox AnchorPane.rightAnchor="0" AnchorPane.topAnchor="0"
 	      AnchorPane.bottomAnchor="0" alignment="CENTER">
-		<MaterialIconView fx:id="icon" glyphName="KEYBOARD_ARROW_RIGHT" glyphSize="30"/>
+		<MaterialIconView fx:id="glyph" glyphName="KEYBOARD_ARROW_RIGHT" glyphSize="30"/>
 	</HBox>
 </fx:root>
